[package]
name = "approximate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic = { version = "0.6.0", optional = true }
rand = { version = "0.8.5", optional = true, no-default-features = true }


[features]
default = ["std", "rand"]
std = ["dep:atomic", "rand?/std"]
rand = ["dep:rand"]
