[package]
name = "approximate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic = { version = "0.6.0", optional = true }
rand = { version = "0.8.5", optional = true, no-default-features = true }

[dev-dependencies]
rayon = "1.8.1"

[features]
default = ["std", "rand"]
std = ["atomic?/std", "rand?/std"]
rand = ["dep:rand"]
nostd = ["dep:atomic"]

[[example]]
name = "test"

# testing no_std counters with thread rng
[[example]]
name = "nostd-test"
required-features = ["nostd", "rand", "rand/std"]